rendered/envs/friclu/kube-prometheus-stack/ingress-kube-prometheus-stack-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: kube-prometheus-stack-prometheus
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kube-prometheus-stack
    app.kubernetes.io/version: 69.6.0
    chart: kube-prometheus-stack-69.6.0
    heritage: Helm
    release: kube-prometheus-stack
  name: kube-prometheus-stack-prometheus
  namespace: kube-prometheus-stack
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.friclu
      http:
        paths:
          - backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
            path: /
            pathType: ImplementationSpecific
